--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,5 @@
     <string name="server_error">Ungültige Antwort erhalten.</string>
     <string name="post">Artikel</string>
     <string name="comments">Kommentare</string>
+    <string name="legal_notice">Impressum</string>
 </resources>
