Add synthetic category "all" to CategoryActivity

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,4 +18,5 @@
     <string name="categories">Kategorien</string>
     <string name="search">Suche</string>
     <string name="refresh">Aktualisieren</string>
+    <string name="all_categories">Alle Kategorien</string>
 </resources>
