Highlight breaking news

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -21,4 +21,5 @@
     <string name="all_categories">Alle Kategorien</string>
     <string name="share">Teilen</string>
     <string name="share_post">Artikel teilen</string>
+    <string name="breaking_highlight">+++ Breaking +++</string>
 </resources>
