--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -22,4 +22,6 @@
     <string name="share">Teilen</string>
     <string name="share_post">Artikel teilen</string>
     <string name="breaking_highlight">+++ Breaking +++</string>
+    <string name="posts">Artikel</string>
+    <string name="videos">Videos</string>
 </resources>
