--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -30,4 +30,5 @@
         <item quantity="other">Es gibt %d neue Videos!</item>
     </plurals>
     <string name="broken_connection">Verbindung fehlgeschlagen.</string>
+    <string name="loading">Lade…</string>
 </resources>
